force-app/main/default/objects/Delivery_Site__c/Delivery_Site__c.object-meta.xml
<CustomObject>
    <label>Delivery Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>