force-app/main/default/objects/Delivery_Site__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <label>Site Address OLD</label>
    <type>Address</type>
</CustomField>