force-app/main/default/objects/Delivery_Site__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Location OLD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>