force-app/main/default/objects/Delivery_Site__c/fields/SiteLocation__c.field-meta.xml
<CustomField>
    <fullName>SiteLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipName>DeliverySites</relationshipName>
    <type>Lookup</type>
</CustomField>