force-app/main/default/objects/Delivery_Site__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <label>Site Address</label>
    <type>Address</type>
</CustomField>